# stall-tool

./: .gitignore  AmazonQ.md  BENCHMARK_VERIFICATION.md  Makefile  README.md  anthropic-tool-use.py  bedrock-tool-use-stalling.py  collect-timing-data.sh  gpt-oss-cache-test.py  gpt-oss-tool-use-stalling.py  nova-tool-use-stalling.py  nova-tool-use-thinking.py  nova_cli_output.json  nova_output.txt  pyproject.toml  requirements.txt  reset-timing-data.sh  system-prompt-tool-use.py  test_latency.py  test_tool_search_conversestream.py  todo.md  tool_timing_data.csv  ttft-latency-comparison.txt
benchmark/: BENCHMARK.md  CLOUDTRAIL_SETUP.md  analyze_results.py  benchmark_anthropic.py  benchmark_bedrock.py  benchmark_runner.py  mock_tools.py  query_cloudtrail.py  run_all_benchmarks.sh
benchmark/tasks/: task_definitions.json
